<resources>
    <string name="app_name">Quiz</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ek_img_content">ExportKit Image</string>
    <string name="match_the_cover_of_the_book_with_its_first_line_string">match the cover of the book with its first line</string>
    <string name="play_string">play</string>
    <string name="vector">vector</string>
    <string name="book_image_title">Book image title</string>
    <string name="retry_game">Retry</string>
    <string name="quote_text">\"%s\"</string>
    <string name="correct_answer">Correct answer</string>
    <string name="user_answer">User answer</string>
    <string name="user_answer_image">User answer image</string>
    <string name="correct_answer_image">Correct answer image</string>
    <string name="user_win">You Win!</string>
    <string name="user_lose">You Lose</string>
    <string name="hard">Hard</string>
    <string name="medium">Medium</string>
    <string name="easy">Easy</string>
    <string name="third_answer_option">Third answer option</string>
    <string name="second_answer_option">Second answer option</string>
    <string name="first_answer_option">First answer option</string>
</resources>